# front_end_RVM_compiler

./: CMakeLists.txt  main.cpp
XML_files/: AlgScalar1.xml  AlgScalar2.xml
include/: frontend_compiler.h
sources/: IR_DataObject.cpp  IR_DataObject.h  IR_Operator.cpp  IR_Operator.h  LogManager.cpp  LogManager.h  configCodeStructure.h  parseXMLfunctions.cpp  parseXMLfunctions.h
src/: frontend_compiler.cpp  ir_data.cpp  ir_link.cpp  ir_operator.cpp  main.cpp
